Stone Soup 0.6
--------------
* Two new gods: Jiyva, god of slime, and Feawn, god of plants.
* Added scroll of silence.
* Several new uniques.
* Round all aptitudes to multiples of 10.
* Armour acquirement is more likely to fill secondary slots.
* Book acquirement doesn't give manuals to spellcasting specialists anymore.
* Added wands as an acquirement option.
* Detected secret doors are still unknown to stupid monsters.
* Let toadstools grow on corpses.
* All worms apart from brain worms are mindless and cannot be pacified.
* Hungry ghosts eat corpses.
* Abort some teleportation attempts with -TELE without losing the turn.
* Weapons of holy wrath cannot be cursed.
* Reduce the chances for artefacts with only one stat property.
* Add !a inscription to prompt when attacking with this wielded item.
* Upgrade equipment of Sonja, Psyche and Terence.
* Jessica casts Pain and is considered evil.
* Unrandarts and fixedarts share the same, cleaner coding structure.
* More vaults.
* Limit Summon Small Mammals to a maximum of two mammals per casting.
* Call Canine Familiar only calls friendly canines.
* Add some tiles "animations" whenever the screen is redrawn.
* Tiles: re-added doll editing screen ('-' command).
* Tiles: clickable spells menu.

Stone Soup 0.5.1 (20090728)
---------------------------

Disclaimer: These are merely the highlights, not an exhaustive list of changes.

* Improved performance for the Tiles version.
* Fixed crashes related to giant spores.
* Fixed Summon Horrible Things sometimes hanging or crashing.
* Fixed monsters refusing to enter or attack into grids on the map edge.
* Fixed minivaults not being placed.
* Fixed inconvenient electrical eels in entry vaults.
* Fixed summoning decks giving permanent summons at low power.
* Fixed erroneous "blocked line of fire" warnings.
* Fixed missing items in Tiles inventory menus.
* Fixed 'C' closing one out of several adjacent doors without prompting.
* Fixed Xom's repel stairs effect moving shops.