@@ -37,7 +37,7 @@ Most adventurers find the Lair of Beasts to be an exciting change of
 climate. And indeed, there is something to be said about getting gored,
 mauled and eaten rather than sliced, burnt or stabbed.
 
-The Lair is ten levels deep and contains the stairs to three more branches.
+The Lair is eight levels deep and contains the stairs to three more branches.
 %%%%
 Swamp
 
