@@ -1,3 +1,0 @@
-Warp Brand
-Death's Door
-Summon Ugly Thing
